--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
-<!DOCTYPE html>
 
+<!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>MidTermExam</title>
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/css/bootstrap.min.css'><link rel="stylesheet" href="./style.css">
+
+</head>
+<body>
 <html><!-- TODO: 🐶1. I'm missing something here aren't I? -->
 
 <head>
   <meta charset="UTF-8">
   <title>seal shell game</title>
   <!-- TODO: 🐶2. most common meta viewport tag needs to go here, thx! -->
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"> 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="styles/style.css">
